tests/ui/pinned_drop/return-type.stderr
error: #[pinned_drop] function must return the unit type
  --> $DIR/return-type.rs:16:39
   |
16 | fn do_drop(foo: Pin<&mut Foo<'_>>) -> bool {
   |                                       ^^^^

error: aborting due to previous error

